add gridsample plugin

--- a/src/plugin/CMakeLists.txt
+++ b/src/plugin/CMakeLists.txt
@@ -22,6 +22,7 @@ set(PLUGIN_LIST deformableConvPlugin
                 adaptivePoolPlugin
                 meshGridPlugin
                 carafeFeatureReassemblePlugin
+                gridSamplePlugin
                 )
 
 set(INFER_PLUGIN_SRC InferPlugin.cpp
