--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,21 +21,21 @@ endif()
 INCLUDE_DIRECTORIES(${CUB_ROOT_DIR})
 
 # tensorrt
-if (NOT DEFINED TENSORRT_ROOT)
-  set(TENSORRT_ROOT "$ENV{HOME}/SDK/TensorRT-7.1.3.4")
+if (NOT DEFINED TENSORRT_DIR)
+  set(TENSORRT_DIR "$ENV{HOME}/SDK/TensorRT-7.1.3.4")
 endif()
 find_path(TENSORRT_INCLUDE_DIR NvInfer.h
-        HINTS ${TENSORRT_ROOT} ${CUDA_TOOLKIT_ROOT_DIR}
+        HINTS ${TENSORRT_DIR} ${CUDA_TOOLKIT_ROOT_DIR}
         PATH_SUFFIXES include)
 MESSAGE(STATUS "Found TensorRT headers at ${TENSORRT_INCLUDE_DIR}")
 find_library(TENSORRT_LIBRARY_INFER nvinfer
-        HINTS ${TENSORRT_ROOT} ${TENSORRT_BUILD} ${CUDA_TOOLKIT_ROOT_DIR}
+        HINTS ${TENSORRT_DIR} ${TENSORRT_BUILD} ${CUDA_TOOLKIT_ROOT_DIR}
         PATH_SUFFIXES lib lib64 lib/x64)
 find_library(TENSORRT_LIBRARY_PARSERS nvparsers
-        HINTS ${TENSORRT_ROOT} ${TENSORRT_BUILD} ${CUDA_TOOLKIT_ROOT_DIR}
+        HINTS ${TENSORRT_DIR} ${TENSORRT_BUILD} ${CUDA_TOOLKIT_ROOT_DIR}
         PATH_SUFFIXES lib lib64 lib/x64)
 find_library(TENSORRT_LIBRARY_INFER_PLUGIN nvinfer_plugin
-        HINTS  ${TENSORRT_ROOT} ${TENSORRT_BUILD} ${CUDA_TOOLKIT_ROOT_DIR}
+        HINTS  ${TENSORRT_DIR} ${TENSORRT_BUILD} ${CUDA_TOOLKIT_ROOT_DIR}
         PATH_SUFFIXES lib lib64 lib/x64)
 set(TENSORRT_LIBRARY ${TENSORRT_LIBRARY_INFER} 
                      ${TENSORRT_LIBRARY_PARSERS} 
