--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ INCLUDE_DIRECTORIES(${CUB_ROOT_DIR})
 
 # tensorrt
 if (NOT DEFINED TENSORRT_DIR)
-  set(TENSORRT_DIR "$ENV{HOME}/SDK/TensorRT-7.1.3.4")
+  set(TENSORRT_DIR "$ENV{HOME}/SDK/TensorRT")
 endif()
 find_path(TENSORRT_INCLUDE_DIR NvInfer.h
         HINTS ${TENSORRT_DIR} ${CUDA_TOOLKIT_ROOT_DIR}
