add torch Embedding

--- a/src/plugin/CMakeLists.txt
+++ b/src/plugin/CMakeLists.txt
@@ -28,6 +28,7 @@ set(PLUGIN_LIST deformableConvPlugin
                 torchCumPlugin
                 torchNMSPlugin
                 roiPoolPlugin
+                torchEmbeddingPlugin
                 )
 
 set(INFER_PLUGIN_SRC InferPlugin.cpp
