--- a/src/plugin/CMakeLists.txt
+++ b/src/plugin/CMakeLists.txt
@@ -29,6 +29,7 @@ set(PLUGIN_LIST deformableConvPlugin
                 torchNMSPlugin
                 roiPoolPlugin
                 torchEmbeddingPlugin
+                torchBmmPlugin
                 )
 
 set(INFER_PLUGIN_SRC InferPlugin.cpp
